--- a/spot/theme/assets/css/main.css
+++ b/spot/theme/assets/css/main.css
@@ -216,7 +216,7 @@ a:after {
 }
 
 #headerwrapGalerie {
-	background: url(../img/Ballons2.jpg) no-repeat center top;
+	background: url(../img/Ballons2light.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
@@ -258,7 +258,7 @@ a:after {
 }
 
 #headerwrapContact {
-	background: url(../img/magicPaul2.jpg) no-repeat center top;
+	background: url(../img/magicPaul2light.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
@@ -298,6 +298,49 @@ a:after {
 #headerwrapContact b {
 	color: #ff7878;
 }
+
+#headerwrapBlog {
+	background: url(../img/fauteuils2.jpg) no-repeat center top;
+	margin-top: -10px;
+	padding-top:20px;
+	text-align:left;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 530px;
+	width: 100%;
+	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#headerwrapBlog h1 {
+	margin-top: 25px;
+	color: white;
+	font-size: 70px;
+	font-weight: 300;
+	letter-spacing: 3px;
+}
+
+#headerwrapBlog h2 {
+	margin-top: 300px;
+	color: white;
+	font-size: 40px;
+	font-weight: 700;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
+
+#headerwrapBlog b {
+	color: #ff7878;
+}
+
 
 #AboutMiddlewrap {
 	background: url(../img/Ballons2.jpg) no-repeat center top;
@@ -560,4 +603,64 @@ a:after {
     background: #ff7878;
 }
 
+.thumbnail {
+    margin: 0px auto;
+    display: block;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    background-size: cover;
+    background-position: center center;
+}
 
+.thumbnail h1 {
+    color: rgb(200, 200, 200);
+    z-index: 33;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    -moz-transform: translateY(-50%) translateX(-50%);
+    -ms-transform: translateY(-50%) translateX(-50%);
+    -o-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-shadow: 0 0.05em 0 rgba(0,0,0,0.5);
+    font-size: 3.5em;
+    width: 85%;
+    text-align: center;
+    max-width: 900px;
+    font-family: "Proxima Nova","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 900;
+    letter-spacing: -0.02em;
+    line-height: 130%;
+    font-weight: 500;
+}
+
+.entry-footer, .entry-meta, .entry-title {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 2em;
+    padding-right: 2em;
+    width: 100%;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    text-align: center;
+}
+
+.dimmer-dark {
+    background-color: rgba(25,25,25,0.75);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.dimmer-dark:hover{
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
