--- a/spot/theme/assets/css/main.css
+++ b/spot/theme/assets/css/main.css
@@ -85,8 +85,8 @@ a:after {
 .navbar {
 	font-weight: 800;
 	font-size: 18px;
-	padding-top: 2px;
-	padding-bottom: 5px;
+	padding-top: 3px;
+	padding-bottom: 0px;
 }
 
 .navbar-inverse {
@@ -133,7 +133,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/magicPaul.jpg) no-repeat center top;
+	background: url(../img/WebImage/magicPaul.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:center;
@@ -174,7 +174,7 @@ a:after {
 }
 
 #headerwrap2 {
-	background: url(../img/magicPaul3.jpg) no-repeat center top;
+	background: url(../img/WebImage/magicPaul3.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
@@ -216,7 +216,7 @@ a:after {
 }
 
 #headerwrapGalerie {
-	background: url(../img/Ballons2light.jpg) no-repeat center top;
+	background: url(../img/WebImage/Ballons2light.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
@@ -258,7 +258,7 @@ a:after {
 }
 
 #headerwrapContact {
-	background: url(../img/magicPaul2light.jpg) no-repeat center top;
+	background: url(../img/WebImage/magicPaul2light.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
@@ -300,7 +300,7 @@ a:after {
 }
 
 #headerwrapBlog {
-	background: url(../img/fauteuils2.jpg) no-repeat center top;
+	background: url(../img/WebImage/fauteuils2.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
@@ -341,9 +341,30 @@ a:after {
 	color: #ff7878;
 }
 
+#headerwrapBlog1 {
+	background: url('http://dananddave.com/wp-content/uploads/2013/04/our-magic-ks-blog.jpg'); no-repeat center top;
+	margin-top: -10px;
+	padding-top:20px;
+	text-align:left;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 530px;
+	width: 100%;
+	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 
 #AboutMiddlewrap {
-	background: url(../img/Ballons2.jpg) no-repeat center top;
+	background: url(../img/WebImage/Ballons2.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:left;
