--- a/spot/theme/assets/css/main.css
+++ b/spot/theme/assets/css/main.css
@@ -84,9 +84,13 @@ a:after {
 
 .navbar {
 	font-weight: 800;
-	font-size: 18px;
-	padding-top: 3px;
+	font-size: 19px;
+	padding-top: 0px;
 	padding-bottom: 0px;
+}
+
+.navbar-fixed-top {
+    border-width: 0 0 0px;
 }
 
 .navbar-inverse {
@@ -134,7 +138,7 @@ a:after {
 
 #headerwrap {
 	background: url(../img/WebImage/magicPaul.jpg) no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:center;
 	background-attachment: relative;
@@ -175,7 +179,7 @@ a:after {
 
 #headerwrap2 {
 	background: url(../img/WebImage/magicPaul3.jpg) no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:left;
 	background-attachment: relative;
@@ -217,7 +221,7 @@ a:after {
 
 #headerwrapGalerie {
 	background: url(../img/WebImage/Ballons2light.jpg) no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:left;
 	background-attachment: relative;
@@ -259,7 +263,7 @@ a:after {
 
 #headerwrapContact {
 	background: url(../img/WebImage/magicPaul2light.jpg) no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:left;
 	background-attachment: relative;
@@ -301,7 +305,7 @@ a:after {
 
 #headerwrapBlog {
 	background: url(../img/WebImage/fauteuils2.jpg) no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:left;
 	background-attachment: relative;
@@ -343,7 +347,7 @@ a:after {
 
 #headerwrapBlog1 {
 	background: url('http://dananddave.com/wp-content/uploads/2013/04/our-magic-ks-blog.jpg'); no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:left;
 	background-attachment: relative;
@@ -365,7 +369,7 @@ a:after {
 
 #AboutMiddlewrap {
 	background: url(../img/WebImage/Ballons2.jpg) no-repeat center top;
-	margin-top: -10px;
+	margin-top: -20px;
 	padding-top:20px;
 	text-align:left;
 	background-attachment: relative;
@@ -658,6 +662,10 @@ a:after {
     font-weight: 500;
 }
 
+/* ==========================================================================
+   Blog
+   ========================================================================== */
+
 .entry-footer, .entry-meta, .entry-title {
     margin-left: 0;
     margin-right: 0;
@@ -685,3 +693,5 @@ a:after {
     width: 100%;
     height: 100%;
 }
+
+
