--- a/spot/theme/assets/css/main.css
+++ b/spot/theme/assets/css/main.css
@@ -17,7 +17,7 @@ body {
   background-color: #f2f2f2;
     font-family: "Lato";
     font-weight: 300;
-    font-size: 16px;
+    font-size: 22px;
     color: #555;
 
     -webkit-font-smoothing: antialiased;
@@ -36,8 +36,12 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Paragraph & Typographic */
 p {
-    line-height: 28px;
+    line-height: 35px;
     margin-bottom: 25px;
+}
+
+.justify{
+    text-align: justify;
 }
 
 .centered {
@@ -667,6 +671,7 @@ a:after {
    ========================================================================== */
 
 .entry-footer, .entry-meta, .entry-title {
+    font-size: 30px
     margin-left: 0;
     margin-right: 0;
     padding-left: 2em;
@@ -692,6 +697,17 @@ a:after {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.Blog-content p{
+	font-size: 22px;
+	text-align: justify;
+    	margin-top: 1.75em !important;
+    	margin-bottom: 1.75em !important;
+	padding-left: 2em;
+    	padding-right: 2em;
+	line-height: 1.65;
+    	font-family: "Proxima Nova","Helvetica Neue","Helvetica",sans-serif;
 }
 
 
